examples/good/12-simple_algebraic.ez
type MyMaybe a = MyJust a | MyNothing;

type EnumZ4 = Zero | One | Two | Three | Error;

f : EnumZ4 -> MyMaybe Integer;
f enum = match enum with {
    Zero -> MyJust 0;
    One -> MyJust 1;
    Two -> MyJust 2;
    Three -> MyJust 3;
    Error -> MyNothing;
};

main : Bool;
main = let {
    a : MyMaybe Integer;
    b : MyMaybe Integer;
    a = f Zero;
    b = f Error;
} in match a with {
    MyJust x -> match b with {
        MyNothing -> x == 0;
        _ -> False;
    };
    _ -> False;
};
