examples/bad/wrong_type_arg_3.ez
type Tree = Empty | Full | WhoKnows;

f : Tree -> Integer;
f t = match t with {
  Empty -> 0;
  Full -> 1;
  WhoKnows -> 2;
};

main : Integer;
main = f False;
